@@ -1,3 +1,6 @@
 
 pygene was written by David McNab <david@freenet.org.nz>
 
+Minimal changes were introduced by Tomasz bla Fortuna 
+to improve performance.
+<bla |at| thera |dot| be>.
